種目内容、セット内容が空白でなければ保存する

--- a/config/locales/models/record.ja.yml
+++ b/config/locales/models/record.ja.yml
@@ -10,4 +10,4 @@ ja:
         record:
           attributes:
             record_exercises:
-              blank: を追加してください
+              blank: を1つ以上入力してください
